<resources>
    <string name="app_name">TodoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="create">Create</string>
    <string name="choose_category">Choose a category</string>
    <string name="todo">Todo</string>
    <string name="on_progress">On Progress</string>
    <string name="done">Done</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="change">Change</string>
    <string name="today_task">Today Task</string>
    <string name="find_your_task">Find your task</string>
    <string name="edit">Edit</string>
    <string name="new_task">New Task</string>
    <string name="task">Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="view_all">View All</string>
    <string name="tasks">Tasks</string>
    <string name="new_category">New Category</string>
    <string name="category_name">Category Name</string>
    <string name="add_image">Add image</string>
    <string name="image">Image</string>
    <string name="edit_category">Edit Category</string>
    <string name="task_name_error">Please enter task name</string>
    <string name="task_date_error">Please choose task date</string>
    <string name="category_name_error">Please choose category</string>
    <string name="archive">Archive</string>
    <string name="calendar">Calendar</string>
    <string name="all_task">All Tasks</string>
    <string name="no_task">No Task To Display &#128531;</string>
    <string name="no_category">No Category To Display &#128531;</string>
    <string name="error_time">Please choose end time > start time</string>
    <string name="start_time_error">Please choose start time</string>
    <string name="end_time_error">Please choose end time</string>
    <string name="back_button_message">Exiting will discard unsaved data. Are you sure you want to exit?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_button_message">Are you sure you want to delete this task permanently?</string>
    <string name="archive_button_message">Are you sure you want to archive this task?</string>
</resources>