<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.task.newTask.NewTaskFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/task_name"
        app:errorIconDrawable="@drawable/baseline_error_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/date"
        app:errorIconDrawable="@drawable/baseline_error_24"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/date"/>

    </com.google.android.material.textfield.TextInputLayout>>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startTimeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/start_time"
            app:errorIconDrawable="@drawable/baseline_error_24"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endTimeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/end_time"
            app:errorIconDrawable="@drawable/baseline_error_24"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:errorIconDrawable="@drawable/baseline_error_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/choose_category"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"/>
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/todoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/onProgressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_progress"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/doneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/priorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/midTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/highTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/creatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_gravity="center"/>
</LinearLayout>