<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.task.viewTask.ViewTaskFragment"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"/>
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_task_element"
        android:textSize="18sp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"/>
    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_task_element"
        android:textSize="18sp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_task_element"
            android:textSize="18sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"/>

        <TextView
            android:id="@+id/endTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_task_element"
            android:textSize="18sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/choose_category"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"/>
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/todoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/onProgressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_progress"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/doneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/priorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/midTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/highTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_gravity="center"/>
</LinearLayout>
