<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.task.editTask.EditTaskFragment"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_button"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:tint="?attr/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:paddingTop="8dp"
            android:textColor="?attr/textColor"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        style="@style/task_element_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorIconDrawable="@drawable/baseline_error_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/task_element" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        style="@style/task_element_title"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorIconDrawable="@drawable/baseline_error_24"
        style="@style/task_element">
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textColor="?attr/textColor"/>
    </com.google.android.material.textfield.TextInputLayout>>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:layout_weight="1"
            style="@style/task_element_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_weight="1"
            style="@style/task_element_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startTimeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorIconDrawable="@drawable/baseline_error_24"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            style="@style/task_element">
            <TextView
                android:id="@+id/startTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="?attr/textColor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endTimeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorIconDrawable="@drawable/baseline_error_24"
            android:layout_weight="1"
            style="@style/task_element"
            android:layout_marginStart="8dp">
            <TextView
                android:id="@+id/endTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="?attr/textColor"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/task_element_title"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorIconDrawable="@drawable/baseline_error_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/task_element"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        style="@style/task_element_title"/>

    <LinearLayout
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/task_element">
        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/choose_category"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textColor="?attr/textColor"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            app:tint="?attr/textColor"
            android:layout_gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="@style/task_element_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/todoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            style="@style/task_element"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:id="@+id/onProgressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_progress"
            style="@style/task_element"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/doneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            style="@style/task_element"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/priorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        style="@style/task_element_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            style="@style/task_element"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:id="@+id/midTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid"
            style="@style/task_element"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/highTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            style="@style/task_element"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change"
        style="@style/button"/>
</LinearLayout>