<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.category.EditCategoryFragment"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_button"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_category"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:paddingTop="8dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name"
        style="@style/task_element_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorIconDrawable="@drawable/baseline_error_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/task_element" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        style="@style/task_element_title"/>

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        style="@style/task_element">
        <TextView
            android:id="@+id/imageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_image"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/chooseImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:layout_gravity="center"
        android:background="@color/deep_blue"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:gravity="center"/>

</LinearLayout>